--- a/compose.yml
+++ b/compose.yml
@@ -27,7 +27,7 @@ services:
       timeout: 20s
       retries: 3
       start_period: 90s
-    # restart: unless-stopped
+    restart: unless-stopped
 
   hera-api:
     build:
