--- a/integration-api/package.json
+++ b/integration-api/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "imapflow": "^1.2.0",
+    "mailparser": "^3.9.1",
     "mongoose": "^9.0.1",
     "puppeteer": "^24.33.0",
     "qrcode": "^1.5.4",
@@ -44,6 +46,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/mailparser": "^3.4.6",
     "@types/node": "^22.10.7",
     "@types/qrcode": "^1.5.6",
     "@types/qrcode-terminal": "^0.12.2",
