--- a/hera-api/config.yaml
+++ b/hera-api/config.yaml
@@ -2,5 +2,6 @@ milvus:
   uri: "http://milvus-db:19530"
   collection: "identifying_msgs_collection"
 nats:
-  servers: ["nats://nats-mq:4222"]
+  #servers: ["nats://nats-mq:4222"]
+  servers: ["nats://172.26.2.70:4222"]
   subject: ["hera.new.msgs"]
