--- a/hera-api/config.yaml
+++ b/hera-api/config.yaml
@@ -5,3 +5,4 @@ nats:
   #servers: ["nats://nats-mq:4222"]
   servers: ["nats://172.26.2.70:4222"]
   subject: ["hera.new.msgs"]
+  producer_subject: "hera.predict.id"
