--- a/athena-api/requirements.txt
+++ b/athena-api/requirements.txt
@@ -27,6 +27,9 @@ idna==3.11
 numpy==2.3.5
 orjson==3.11.5
 pandas==2.3.3
+pandoc==2.4
+plumbum==1.10.0
+ply==3.11
 proto-plus==1.26.1
 protobuf==5.29.5
 pyasn1==0.6.1
@@ -35,6 +38,7 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 pymilvus==2.6.5
 pymongo==4.15.5
+pypandoc==1.16.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
